--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,8 +46,8 @@ url = "1.7"
 parking_lot = {version = "0.6"}
 semver = "0.9.0"
 
-grin_api = { git = "https://github.com/NotMrPotter/mwc-node" }
-grin_core = { git = "https://github.com/NotMrPotter/mwc-node" }
-grin_keychain = { git = "https://github.com/NotMrPotter/mwc-node" }
-grin_util = { git = "https://github.com/NotMrPotter/mwc-node" }
-grin_store = { git = "https://github.com/NotMrPotter/mwc-node" }
+grin_api = { git = "https://github.com/cgilliard/mwc-node" }
+grin_core = { git = "https://github.com/cgilliard/mwc-node" }
+grin_keychain = { git = "https://github.com/cgilliard/mwc-node" }
+grin_util = { git = "https://github.com/cgilliard/mwc-node" }
+grin_store = { git = "https://github.com/cgilliard/mwc-node" }
