--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,8 @@ rpassword = "2.1.0"
 url = "1.7"
 parking_lot = {version = "0.6"}
 semver = "0.9.0"
+commands = "0.0.5"
+enquote = "1.0"
 
 grin_api = { git = "https://github.com/cgilliard/mwc-node" }
 grin_core = { git = "https://github.com/cgilliard/mwc-node" }
