--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,9 +47,9 @@ semver = "0.9.0"
 commands = "0.0.5"
 enquote = "1.0"
 
-grin_api = { git = "https://github.com/cgilliard/mwc-node" }
-grin_core = { git = "https://github.com/cgilliard/mwc-node" }
-grin_keychain = { git = "https://github.com/cgilliard/mwc-node" }
-grin_util = { git = "https://github.com/cgilliard/mwc-node" }
-grin_store = { git = "https://github.com/cgilliard/mwc-node" }
-grin_p2p = { git = "https://github.com/cgilliard/mwc-node" }
+grin_api = { git = "https://github.com/mwcproject/mwc-node" }
+grin_core = { git = "https://github.com/mwcproject/mwc-node" }
+grin_keychain = { git = "https://github.com/mwcproject/mwc-node" }
+grin_util = { git = "https://github.com/mwcproject/mwc-node" }
+grin_store = { git = "https://github.com/mwcproject/mwc-node" }
+grin_p2p = { git = "https://github.com/mwcproject/mwc-node" }
