--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mwc713"
-version = "2.1.2"
+version = "2.1.3-beta.1"
 authors = ["vault713 devs"]
 description = "A wallet that makes it easy to send, store, and swap Grin."
 keywords = [ "grin", "mimblewimble", "rust", "crypto", "cryptocurrency" ]
@@ -20,7 +20,7 @@ ws = { version = "0.8", features = ["nativetls"] }
 native-tls = { version = "0.2", features = ["vendored"] }
 dirs = "1"
 futures = "0.1"
-tokio = "= 0.1.11"
+tokio = "= 0.1.22"
 rand = "0.5"
 sha2 = "0.7"
 digest = "0.7"
@@ -47,6 +47,7 @@ parking_lot = {version = "0.6"}
 semver = "0.9.0"
 commands = "0.0.5"
 enquote = "1.0"
+reqwest = "0.9.20"
 
 grin_api = { git = "https://github.com/mwcproject/mwc-node"}
 grin_core = { git = "https://github.com/mwcproject/mwc-node" }
