--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ serde_json = "1.0"
 toml = "0.4"
 clap = "2"
 ansi_term = "0.11"
+nanoid = "0.1.3"
 colored = "1.6"
 ws = { version = "0.8", features = ["nativetls"] }
 native-tls = { version = "0.2", features = ["vendored"] }
