--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,9 +50,24 @@ commands = "0.0.5"
 enquote = "1.0"
 reqwest = "0.9.20"
 
-grin_api = { git = "https://github.com/mwcproject/mwc-node", tag="2.4.0"}
-grin_core = { git = "https://github.com/mwcproject/mwc-node", tag="2.4.0"}
-grin_keychain = { git = "https://github.com/mwcproject/mwc-node", tag="2.4.0"}
-grin_util = { git = "https://github.com/mwcproject/mwc-node", tag="2.4.0"}
-grin_store = { git = "https://github.com/mwcproject/mwc-node", tag="2.4.0"}
-grin_p2p = { git = "https://github.com/mwcproject/mwc-node", tag="2.4.0"}
+grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+bitcoin = { version = "0.19", git = "https://github.com/mwcproject/rust-bitcoin", branch = "zkp", features = ["bitcoinconsensus"] }
+grinswap = { git = "https://github.com/mwcproject/mwcswap", version= "0.1.0"}
+grin_core = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+grin_keychain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+grin_chain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+grin_util = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+grin_api = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+grin_store = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+grin_p2p = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+
+#grin_core = { git = "http://github.com/mwcproject/mwc-node", tag = "2.4.0"}
+#grin_keychain = { git = "http://github.com/mwcproject/mwc-node", tag = "2.4.0"}
+#grin_chain = { git = "http://github.com/mwcproject/mwc-node", tag = "2.4.0"}
+#grin_util = { git = "http://github.com/mwcproject/mwc-node", tag = "2.4.0"}
+#grin_api = { git = "http://github.com/mwcproject/mwc-node", tag = "2.4.0"}
+#grin_store = { git = "http://github.com/mwcproject/mwc-node", tag = "2.4.0"}
+#grin_p2p = { git = "http://github.com/mwcproject/mwc-node", tag = "2.4.0"}
+
+[patch.crates-io]
+grin_secp256k1zkp = { git = "https://github.com/mwcproject/rust-secp256k1-zkp", branch = "master" }
