--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,7 +54,8 @@ reqwest = "0.9.20"
 
 grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
 bitcoin = { version = "0.19", git = "https://github.com/mwcproject/rust-bitcoin", branch = "zkp", features = ["bitcoinconsensus"] }
-grinswap = { git = "https://github.com/mwcproject/mwcswap", branch = "master"}
+#grinswap = { git = "https://github.com/mwcproject/mwcswap", branch = "master"}
+grinswap = { path = "../grinswap", version= "0.1.0"}
 grin_core = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
 grin_keychain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
 grin_chain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
