--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde = "1.0"
 dont_disappear = "3.0.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+lazy_static = "1.4.0"
 toml = "0.4"
 clap = "2"
 ansi_term = "0.11"
