--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ prettytable-rs = "0.7"
 gotham = "0.3.0"
 gotham_derive = "0.3.0"
 hyper = "0.12"
+hyper-rustls = "0.14"
 mime = "0.3"
 chrono = { version = "0.4.4", features = ["serde"] }
 blake2-rfc = "0.2"
@@ -48,7 +49,7 @@ parking_lot = {version = "0.6"}
 semver = "0.9.0"
 commands = "0.0.5"
 enquote = "1.0"
-reqwest = "0.9.20"
+reqwest = "0.9.22"
 
 grin_api = { git = "https://github.com/mwcproject/mwc-node", tag="2.4.0"}
 grin_core = { git = "https://github.com/mwcproject/mwc-node", tag="2.4.0"}
