--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,13 +55,14 @@ enquote = "1.0"
 reqwest = "0.9.22"
 
 # Release
-grin_api = { git = "https://github.com/mwcproject/mwc-node", version = "2.4.2" }
-grin_core = { git = "https://github.com/mwcproject/mwc-node", version = "2.4.2" }
-grin_keychain = { git = "https://github.com/mwcproject/mwc-node", version = "2.4.2" }
-grin_util = { git = "https://github.com/mwcproject/mwc-node", version = "2.4.2" }
-grin_store = { git = "https://github.com/mwcproject/mwc-node", version = "2.4.2" }
-grin_p2p = { git = "https://github.com/mwcproject/mwc-node", version = "2.4.2" }
-grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", version = "2.4.3" }
+grin_core = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.2" }
+grin_keychain = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.2" }
+grin_chain = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.2" }
+grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.2" }
+grin_api = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.2" }
+grin_store = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.2" }
+grin_p2p = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.2" }
+grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", tag = "2.4.3" }
 
 
 # For local testing
