--- a/.ci/install.yml
+++ b/.ci/install.yml
@@ -1,9 +1,8 @@
 steps:
   - script: |
-      curl -sSf -o rustup-init.exe https://win.rustup.rs
-      rustup-init.exe -y
-      echo "##vso[task.setvariable variable=PATH;]%PATH%;%USERPROFILE%\.cargo\bin"
+      git apply .ci/win.patch
       choco install -y llvm
+      choco install rust
     displayName: Windows Install Rust
     condition: eq( variables['Agent.OS'], 'Windows_NT' )
   - script: |
