--- a/.ci/windows-release.yml
+++ b/.ci/windows-release.yml
@@ -1,4 +1,7 @@
 steps:
+  - script: 'cargo test --all'
+    displayName: Cargo Test All
+    condition:  and(succeeded(), contains(variables['Build.SourceBranch'], 'refs/tags/'), eq(variables['CI_JOB'], 'release' ))
   - script: 'cargo build --release'
     displayName: Build Release
     condition:  and(succeeded(), contains(variables['Build.SourceBranch'], 'refs/tags/'), eq(variables['CI_JOB'], 'release' ))
@@ -29,19 +32,17 @@ steps:
       powershell -Command "get-filehash -algorithm sha256 $(Build.ArtifactStagingDirectory)\mwc713-$(build.my_tag)-$(build.platform).zip | Format-List |  Out-String | ForEach-Object { $_.Trim() } > $(Build.ArtifactStagingDirectory)\mwc713-$(build.my_tag)-$(build.platform)-sha256sum.txt"
     displayName: Create Checksum
     condition:  and(succeeded(), contains(variables['Build.SourceBranch'], 'refs/tags/'), eq(variables['CI_JOB'], 'release' ))
-  - task: GithubRelease@0
+  - task: GithubRelease@1
     displayName: Github release
     condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'), eq(variables['CI_JOB'], 'release' ))
     inputs:
-      gitHubConnection: 'github-release'
+      gitHubConnection: 'github.com_bayk'
       repositoryName: 'mwcproject/mwc713'
       action: 'edit'
-      target: '$(build.sourceVersion)'
-      tagSource: 'manual'
+      tagSource: "Git tag"
       tag: '$(build.my_tag)'
       assets: |
         $(Build.ArtifactStagingDirectory)\mwc713-$(build.my_tag)-$(build.platform).zip
         $(Build.ArtifactStagingDirectory)\mwc713-$(build.my_tag)-$(build.platform)-sha256sum.txt
-      title: '$(build.my_tag)'
       assetUploadMode: 'replace'
       addChangeLog: true
