--- a/.ci/install.yml
+++ b/.ci/install.yml
@@ -7,10 +7,14 @@ steps:
   - script: |
       curl https://sh.rustup.rs -sSf | sh -s -- -y
       echo "##vso[task.setvariable variable=PATH;]$PATH:$HOME/.cargo/bin"
+      clang --version
+      brew uninstall llvm
+      clang --version
     displayName: macOS Install Rust
     condition: eq( variables['Agent.OS'], 'Darwin' )
   - script: |
+      sudo apt-get update -yqq
+      sudo apt-get install -yqq --no-install-recommends libncursesw5-dev
       curl https://sh.rustup.rs -sSf | sh -s -- -y
-      echo "##vso[task.setvariable variable=PATH;]$PATH:$HOME/.cargo/bin"
-    displayName: Linux Install Rust and Dependencies
+    displayName: Linux Install Dependencies
     condition: eq( variables['Agent.OS'], 'Linux' )
