--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ ws = { version = "0.8", features = ["nativetls"] }
 native-tls = { version = "0.2", features = ["vendored"] }
 dirs = "1"
 futures = "0.1"
-tokio = "= 0.1.22"
+tokio = "0.1.22"
 rand = "0.5"
 sha2 = "0.7"
 digest = "0.7"
