--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mwc713"
-version = "2.4.1"
+version = "3.1.2"
 authors = ["vault713 devs"]
 description = "A wallet that makes it easy to send, store, and swap MWC."
 keywords = [ "grin", "mimblewimble", "rust", "crypto", "cryptocurrency" ]
@@ -8,11 +8,13 @@ license = "Apache-2.0"
 readme = "README.md"
 
 [dependencies]
-serde = "1.0"
-dont_disappear = "3.0.0"
-serde_derive = "1.0"
-serde_json = "1.0"
+bitcoin = { version = "0.19", git = "https://github.com/mwcproject/rust-bitcoin", branch = "zkp", features = ["bitcoinconsensus"] }
 lazy_static = "1.4.0"
+http = "0.1.5"
+serde = "1"
+dont_disappear = "3.0.0"
+serde_derive = "1"
+serde_json = "1"
 toml = "0.4"
 clap = "2"
 ansi_term = "0.11"
@@ -20,26 +22,28 @@ nanoid = "0.1.3"
 colored = "1.6"
 ws = { version = "0.8", features = ["nativetls"] }
 native-tls = { version = "0.2", features = ["vendored"] }
-dirs = "1"
+dirs = "1.0.3"
 futures = "0.1"
-tokio = "= 0.1.22"
-rand = "0.5"
+tokio = "0.1.22"
+rand = "0.6"
 sha2 = "0.7"
 digest = "0.7"
 lmdb-zero = "0.4"
 failure = "0.1"
-uuid = { version = "0.6", features = ["serde", "v4"] }
-regex = "1"
+uuid = { version = "0.7", features = ["serde", "v4"] }
+regex = "1.3"
 rustyline = "5.0"
 hmac = "0.6"
 ripemd160 = "0.7"
-ring = "0.13"
+ring = "0.14"
 prettytable-rs = "0.7"
-gotham = "0.3.0"
-gotham_derive = "0.3.0"
+# Requesting gotham 0.4 for tls support
+gotham = "0.4.0"
+gotham_derive = "0.4.0"
+rustls = "0.15"
 hyper = "0.12"
-hyper-rustls = "0.14"
-http = "0.1.5"
+hyper-tls = "0.3.2"
+hyper-rustls = "0.16"
 mime = "0.3"
 chrono = { version = "0.4.4", features = ["serde"] }
 blake2-rfc = "0.2"
@@ -48,30 +52,48 @@ env_logger = "0.6.0"
 rpassword = "2.1.0"
 url = "1.7"
 parking_lot = {version = "0.6"}
-semver = "0.9.0"
+semver = "0.9"
 commands = "0.0.5"
 enquote = "1.0"
-reqwest = "0.9.20"
+reqwest = "0.9.22"
 
-grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-bitcoin = { version = "0.19", git = "https://github.com/mwcproject/rust-bitcoin", branch = "zkp", features = ["bitcoinconsensus"] }
-#grinswap = { git = "https://github.com/mwcproject/mwcswap", branch = "master"}
-grinswap = { path = "../grinswap", version= "0.1.0"}
-grin_core = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-grin_keychain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-grin_chain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-grin_util = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-grin_api = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-grin_store = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-grin_p2p = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+# Release
+grinswap = { git = "https://github.com/mwcproject/mwcswap", branch = "master"}
+grin_core = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.1" }
+grin_keychain = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.1" }
+grin_chain = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.1" }
+grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.1" }
+grin_api = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.1" }
+grin_store = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.1" }
+grin_p2p = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.1" }
+grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.1.4" }
+grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.1.4" }
+grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.1.4" }
+grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.1.4" }
 
-#grin_core = { git = "http://github.com/mwcproject/mwc-node", tag = "2.4.0"}
-#grin_keychain = { git = "http://github.com/mwcproject/mwc-node", tag = "2.4.0"}
-#grin_chain = { git = "http://github.com/mwcproject/mwc-node", tag = "2.4.0"}
-#grin_util = { git = "http://github.com/mwcproject/mwc-node", tag = "2.4.0"}
-#grin_api = { git = "http://github.com/mwcproject/mwc-node", tag = "2.4.0"}
-#grin_store = { git = "http://github.com/mwcproject/mwc-node", tag = "2.4.0"}
-#grin_p2p = { git = "http://github.com/mwcproject/mwc-node", tag = "2.4.0"}
+# For bleeding edge
+#grin_core = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+#grin_keychain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+#grin_chain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+#grin_util = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+#grin_api = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+#grin_store = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+#grin_p2p = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+#grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
 
-[patch.crates-io]
-grin_secp256k1zkp = { git = "https://github.com/mwcproject/rust-secp256k1-zkp", branch = "master" }
+# For local testing
+# grin_api = { path = "../mwc-node/api", version= "3.0.0-beta.1"}
+# grin_core = { path = "../mwc-node/core", version= "3.0.0-beta.1"}
+# grin_keychain = { path = "../mwc-node/keychain", version= "3.0.0-beta.1"}
+# grin_chain = {path = "../mwc-node/chain", version= "3.0.0-beta.1" }
+# grin_util = { path = "../mwc-node/util", version= "3.0.0-beta.1"}
+# grin_store = { path = "../mwc-node/store", version= "3.0.0-beta.1"}
+# grin_p2p = { path = "../mwc-node/p2p", version= "3.0.0-beta.1" }
+# grin_wallet_impls = { path = "../mwc-wallet/impls", version= "3.0.0-beta.1" }
+# grin_wallet_libwallet = { path = "../mwc-wallet/libwallet", version= "3.0.0-beta.1" }
+# grin_wallet_api = { path = "../mwc-wallet/api", version= "3.0.0-beta.1" }
+# grin_wallet_controller = { path = "../mwc-wallet/controller", version= "3.0.0-beta.1" }
+
