--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,14 @@ keywords = [ "grin", "mimblewimble", "rust", "crypto", "cryptocurrency" ]
 license = "Apache-2.0"
 readme = "README.md"
 
+[[bin]]
+name = "mwc713"
+path = "src/main.rs"
+
+[[bin]]
+name = "mwczip"
+path = "src/zip/main.rs"
+
 [dependencies]
 serde = "1"
 dont_disappear = "3.0.0"
@@ -54,6 +62,7 @@ commands = "0.0.5"
 enquote = "1.0"
 reqwest = "0.9.22"
 lazy_static = "1"
+zip = { version = "0.5", features = ["deflate"] }
 
 # Release
 #grin_core = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.3" }
