--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,11 +33,9 @@ tokio = "0.1.22"
 rand = "0.6"
 sha2 = "0.7"
 digest = "0.7"
-lmdb-zero = "0.4"
 failure = "0.1"
 uuid = { version = "0.7", features = ["serde", "v4"] }
 regex = "1.3"
-rustyline = "5.0"
 hmac = "0.6"
 ripemd160 = "0.7"
 ring = "0.14"
@@ -54,7 +52,6 @@ chrono = { version = "0.4.4", features = ["serde"] }
 blake2-rfc = "0.2"
 log = "0.4"
 env_logger = "0.6.0"
-rpassword = "2.1.0"
 url = "1.7"
 parking_lot = {version = "0.6"}
 semver = "0.9"
@@ -102,4 +99,9 @@ grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", tag
 #grin_wallet_libwallet = { path = "../mwc-wallet/libwallet", version= "3.1.7" }
 #grin_wallet_api = { path = "../mwc-wallet/api", version= "3.1.7" }
 #grin_wallet_controller = { path = "../mwc-wallet/controller", version= "3.1.7" }
+
+# OS specific dependencies
+[target.'cfg(not(target_os = "android"))'.dependencies]
+rustyline = "5.0"
+rpassword = "2.1.0"
 
