--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,6 +69,7 @@ zip = { version = "0.5", features = ["deflate"] }
 #grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.1.8-beta.1" }
 #grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.1.8-beta.1" }
 #grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.1.8-beta.1" }
+#grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.1.8-beta.1" }
 
 # For bleeding edge
 grin_core = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
@@ -82,6 +83,7 @@ grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", branch =
 grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
 grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
 grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
 
 # For local testing
 #grin_api = { path = "../mwc-node/api", version= "3.1.3"}
@@ -95,6 +97,7 @@ grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", bra
 #grin_wallet_libwallet = { path = "../mwc-wallet/libwallet", version= "3.1.7" }
 #grin_wallet_api = { path = "../mwc-wallet/api", version= "3.1.7" }
 #grin_wallet_controller = { path = "../mwc-wallet/controller", version= "3.1.7" }
+#grin_wallet_config = { path = "../mwc-wallet/config", version= "3.1.7" }
 
 # OS specific dependencies
 [target.'cfg(not(target_os = "android"))'.dependencies]
