--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mwc713"
-version = "3.2.0"
+version = "3.2.1-beta.1"
 authors = ["vault713 devs"]
 description = "A wallet that makes it easy to send, store, and swap MWC."
 keywords = [ "grin", "mimblewimble", "rust", "crypto", "cryptocurrency" ]
@@ -55,32 +55,32 @@ zip = { version = "0.5", features = ["deflate"] }
 
 
 # Release
-grin_core = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
-grin_keychain = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
-grin_chain = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
-grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
-grin_api = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
-grin_store = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
-grin_p2p = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
-grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.0" }
-grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.0" }
-grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.0" }
-grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.0" }
-grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.0" }
+#grin_core = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
+#grin_keychain = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
+#grin_chain = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
+#grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
+#grin_api = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
+#grin_store = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
+#grin_p2p = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
+#grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.0" }
+#grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.0" }
+#grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.0" }
+#grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.0" }
+#grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.0" }
 
 # For bleeding edge
-#grin_core = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-#grin_keychain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-#grin_chain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-#grin_util = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-#grin_api = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-#grin_store = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-#grin_p2p = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-#grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-#grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-#grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-#grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-#grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+grin_core = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+grin_keychain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+grin_chain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+grin_util = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+grin_api = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+grin_store = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+grin_p2p = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
 
 # For local testing
 #grin_api = { path = "../mwc-node/api", version= "3.1.3"}
