--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ serde = "1"
 dont_disappear = "3.0.0"
 serde_derive = "1"
 serde_json = "1"
+path-clean = "0.1.0"
 toml = "0.4"
 clap = "2"
 ansi_term = "0.11"
