build clean up. Windows build fix

--- a/.ci/release.yml
+++ b/.ci/release.yml
@@ -27,10 +27,10 @@ steps:
       tarCompression: 'gz'
       archiveFile: '$(Build.ArtifactStagingDirectory)/mwc713-$(build.my_tag)-$(build.platform).tar.gz'
   - script: |
-      openssl sha256 $(Build.ArtifactStagingDirectory)/mwc713-$(build.my_tag)-$(build.platform).tar.gz > $(Build.ArtifactStagingDirectory)/mwc713-$(build.my_tag)-$(build.platform)-sha256sum.txt
+      cd $(Build.ArtifactStagingDirectory) && openssl sha256 mwc713-$(build.my_tag)-$(build.platform).tar.gz > mwc713-$(build.my_tag)-$(build.platform)-sha256sum.txt
     displayName: Create Checksum
     condition:  and(succeeded(), contains(variables['Build.SourceBranch'], 'refs/tags/'), eq(variables['CI_JOB'], 'release' ))
-  - task: GithubRelease@1
+  - task: GithubRelease@0
     displayName: Github release
     condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'), eq(variables['CI_JOB'], 'release' ))
     inputs:
@@ -42,5 +42,6 @@ steps:
       assets: |
         $(Build.ArtifactStagingDirectory)/mwc713-$(build.my_tag)-$(build.platform).tar.gz
         $(Build.ArtifactStagingDirectory)/mwc713-$(build.my_tag)-$(build.platform)-sha256sum.txt
+      title: '$(build.my_tag)'
       assetUploadMode: 'replace'
       addChangeLog: true
