--- a/.ci/release.yml
+++ b/.ci/release.yml
@@ -1,7 +1,7 @@
 steps:
   - script: 'cargo test --all'
     displayName: Cargo Test All
-  - script: 'cargo build --release'
+  - script: './build_static.sh'
     displayName: Build Release
   - script: |
       MY_TAG="$(Build.SourceBranch)"
