--- a/.ci/release.yml
+++ b/.ci/release.yml
@@ -3,10 +3,10 @@ steps:
     displayName: Cargo Test All
   - script: './build_static_linux.sh'
     displayName: Build Linux Release
-    condition: and(eq( variables['Agent.OS'], 'Windows_NT' ), eq( variables['CI_JOB'], 'test-all' ))
+    condition: and(succeeded(), eq( variables['Agent.OS'], 'Windows_NT' ))
   - script: './build_static.sh'
     displayName: Build MacOS Release
-    condition: and(eq( variables['Agent.OS'], 'Darwin' ), eq( variables['CI_JOB'], 'test-all' ))
+    condition: and(succeeded(), eq( variables['Agent.OS'], 'Darwin' ))
   - script: |
       MY_TAG="$(Build.SourceBranch)"
       MY_TAG=${MY_TAG#refs/tags/}
