--- a/.cargo/config
+++ b/.cargo/config
@@ -2,3 +2,7 @@
 rustflags = ["-Clink-arg=-Wl,--allow-multiple-definition"]
 [target.x86_64-unknown-linux-gnu]
 rustflags = ["-Clink-arg=-Wl,--allow-multiple-definition"]
+[target.x86_64-pc-windows-msvc]
+rustflags = ["-Clink-arg=/FORCE:MULTIPLE"]
+[target.i686-pc-windows-msvc]
+rustflags = ["-Clink-arg=/FORCE:MULTIPLE"]
