Mobile wallet, Re-sync with Full Node failed #806

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,12 +63,12 @@ grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "4.2.2" }
 grin_api = { git = "https://github.com/mwcproject/mwc-node", tag = "4.2.2" }
 grin_store = { git = "https://github.com/mwcproject/mwc-node", tag = "4.2.2" }
 grin_p2p = { git = "https://github.com/mwcproject/mwc-node", tag = "4.2.2" }
-grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", tag = "4.2.0" }
-grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", tag = "4.2.0" }
-grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", tag = "4.2.0" }
-grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", tag = "4.2.0" }
-grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", tag = "4.2.0" }
-grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", tag = "4.2.0" }
+#grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", tag = "4.2.0" }
+#grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", tag = "4.2.0" }
+#grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", tag = "4.2.0" }
+#grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", tag = "4.2.0" }
+#grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", tag = "4.2.0" }
+#grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", tag = "4.2.0" }
 
 # For bleeding edge
 #grin_core = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
@@ -78,12 +78,12 @@ grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", tag = "4.
 #grin_api = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
 #grin_store = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
 #grin_p2p = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-#grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-#grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-#grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-#grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-#grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-#grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
 
 # For local testing
 #grin_api = { path = "../mwc-node/api"}
